--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -1,20 +1,20 @@
-NAME		= 	megaphone
+NAME		=	megaphone.out
 
-SRC_DIR		= 	src
-OBJ_DIR		= 	obj
-INCLUDE_DIR	= 	include
+SRC_DIR		=	src
+OBJ_DIR		=	obj
+INCLUDE_DIR	=	include
 
 INCLUDES	=	-I $(INCLUDE_DIR)
 SRCDIRS		=	$(shell find $(SRC_DIR) -type d)
-INCLUDES 	+=	$(addprefix -I ,$(SRCDIRS))
+INCLUDES	+=	$(addprefix -I ,$(SRCDIRS))
 
 CC			=	c++
 CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 RM			=	rm
 
-SRCS		=	$(SRCS)/megaphone.cpp
-OBJS		=	$(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
-DEPS		=	$(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.d)
+SRCS		=	$(SRC_DIR)/megaphone.cpp
+OBJS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
+DEPS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.d)
 .PHONY: $(DEPS)
 
 all:			$(NAME)
@@ -22,7 +22,7 @@ all:			$(NAME)
 $(NAME):		$(OBJS)
 				$(CC) $(OBJS) $(CFLAGS) -o $(NAME)
 
-$(OBJ_DIR)/%.o:	$(SRC_DIR)/%.c
+$(OBJ_DIR)/%.o:	$(SRC_DIR)/%.cpp
 				@mkdir -p $$(dirname $@)
 				$(CC) $(CFLAGS) $(INCLUDES) -MMD -MP -c $< -o $@
 
