--- a/cpp01/ex05/Makefile
+++ b/cpp01/ex05/Makefile
@@ -12,10 +12,7 @@ CC			=	c++
 CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 RM			=	rm
 
-SRCS		=	$(SRC_DIR)/main.cpp \
-				$(SRC_DIR)/Zombie.cpp \
-				$(SRC_DIR)/newZombie.cpp \
-				$(SRC_DIR)/randomChump.cpp
+SRCS		=	$(SRC_DIR)/
 OBJS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
 DEPS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.d)
 .PHONY: $(DEPS)
