--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -1,4 +1,4 @@
-NAME		=	ex
+NAME		=	exe
 
 SRC_DIR		=	src
 OBJ_DIR		=	obj
@@ -12,7 +12,9 @@ CC			=	c++
 CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 RM			=	rm
 
-SRCS		=	$(SRC_DIR)/
+SRCS		=	$(SRC_DIR)/main.cpp \
+				$(SRC_DIR)/Zombie.cpp \
+				$(SRC_DIR)/zombieHorde.cpp
 OBJS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
 DEPS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.d)
 .PHONY: $(DEPS)
