--- a/cpp01/ex02/Makefile
+++ b/cpp01/ex02/Makefile
@@ -1,8 +1,8 @@
-NAME		=	ex
+NAME		=	exe
 
 SRC_DIR		=	src
 OBJ_DIR		=	obj
-INCLUDE_DIR	=	include
+INCLUDE_DIR	=	.
 
 INCLUDES	=	-I $(INCLUDE_DIR)
 SRCDIRS		=	$(shell find $(SRC_DIR) -type d)
@@ -12,7 +12,7 @@ CC			=	c++
 CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 RM			=	rm
 
-SRCS		=	$(SRC_DIR)/
+SRCS		=	$(SRC_DIR)/main.cpp
 OBJS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
 DEPS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.d)
 .PHONY: $(DEPS)
