--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -12,7 +12,10 @@ CC			=	c++
 CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 RM			=	rm
 
-SRCS		=	$(SRC_DIR)/
+SRCS		=	$(SRC_DIR)/main.cpp \
+				$(SRC_DIR)/Weapon.cpp \
+				$(SRC_DIR)/HumanA.cpp \
+				$(SRC_DIR)/HumanB.cpp
 OBJS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
 DEPS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.d)
 .PHONY: $(DEPS)
