--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -13,9 +13,11 @@ CFLAGS		=	-Wall -Wextra -Werror -std=c++98
 RM			=	rm
 
 SRCS		=	$(SRC_DIR)/main.cpp \
+				$(SRC_DIR)/MateriaSource.cpp \
 				$(SRC_DIR)/AMateria.cpp \
 				$(SRC_DIR)/Character.cpp \
-				$(SRC_DIR)/Cure.cpp
+				$(SRC_DIR)/Cure.cpp \
+				$(SRC_DIR)/Ice.cpp
 OBJS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
 DEPS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.d)
 .PHONY: $(DEPS)
