--- a/cpp09/ex01/Makefile
+++ b/cpp09/ex01/Makefile
@@ -18,6 +18,12 @@ OBJS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
 DEPS		=	$(SRCS:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.d)
 .PHONY: $(DEPS)
 
+TEST_NAME	=	test
+TEST_OPTION	=	-Wall -Wextra -Werror -std=c++11 \
+				-I$(shell brew --prefix cppunit)/include \
+				-L$(shell brew --prefix cppunit)/lib \
+				-lcppunit
+
 all:			$(NAME)
 
 $(NAME):		$(OBJS)
@@ -31,9 +37,13 @@ clean:
 				$(RM) -rf $(OBJS) $(OBJ_DIR)
 
 fclean:			clean
-				$(RM) -f $(NAME)
+				$(RM) -f $(NAME) $(TEST_NAME)
 
 re:				fclean all
 
-.PHONY:			all clean fclean re
+test:			$(SRC_DIR)/rpn_test.cpp $(SRC_DIR)/RPN.cpp
+				$(CC) $(CFLAGS) $(INCLUDES) $(TEST_OPTION) $^ -o $@
+				./$(TEST_NAME)
+
+.PHONY:			all clean fclean re test
 -include $(DEPS)
